force-app/main/default/objects/APXTConga4__Conga_Collection_Solution__c/APXTConga4__Conga_Collection_Solution__c.object-meta.xml
<CustomObject>
    <label>Conga Collection Solution</label>
    <nameField>
        <label>Conga Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Collection Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>