force-app/main/default/objects/APXTConga4__Conga_Collection_Solution__c/fields/APXTConga4__Conga_Solution__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Solution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conga Solution</label>
    <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
    <relationshipLabel>Conga Collection Solutions</relationshipLabel>
    <relationshipName>Conga_Collection_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>