force-app/main/default/objects/APXTConga4__Conga_Collection_Solution__c/fields/APXTConga4__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>